# cuda-kernel-optimization-lab

./: .gitignore  CMakeLists.txt  README.md  REPORT.md
benchmarks/: benchmark_gemm.cpp
cpu/: benchmark_softmax.cpp  gemm_cpu.cpp  softmax_cpu.cpp
include/: benchmark_shapes.h  benchmark_utils.h  cpu_ops.h  tensor_utils.h
scripts/: env_check.sh  stamp_env.sh
